Chore: create staff user documentation and associated implementations
