# src/api/modules/staff/controllers/StaffCreate.controller.ts
@@ -9,6 +9,8 @@ import { autoInjectable } from "tsyringe";
 import CreateStaffService from "../services/CreateStaff.service";
 import { validateData } from "~/api/shared/helpers/middleware/validateData";
 import { createStaffUserSchema } from "../validators/StaffCreateSchema";
+import { PropTypeEnum, ResultTDescriber, TypeDescriber } from "~/infrastructure/internal/documentation/TypeDescriber";
+import { CreateStaffUserData, CreateStaffUserResponse } from "../types/StaffTypes";
 
 @autoInjectable()
 export default class StaffCreateController extends BaseController {
@@ -59,6 +61,74 @@ export default class StaffCreateController extends BaseController {
         },
       ],
       description: "Create Staff User",
+      apiDoc: {
+        contentType: HttpContentTypeEnum.APPLICATION_JSON,
+        requireAuth: true,
+        schema: new ResultTDescriber<CreateStaffUserResponse>({
+          name: "CreateStaffUserResponse",
+          type: PropTypeEnum.OBJECT,
+          props: {
+            data: new TypeDescriber<CreateStaffUserResponse>({
+              name: "SignUpUserResponse",
+              type: PropTypeEnum.OBJECT,
+              props: {
+                user: {
+                  type: PropTypeEnum.OBJECT,
+                },
+                staff: {
+                  type: PropTypeEnum.OBJECT,
+                },
+              },
+            }),
+            error: {
+              type: PropTypeEnum.STRING,
+            },
+            message: {
+              type: PropTypeEnum.STRING,
+            },
+            statusCode: {
+              type: PropTypeEnum.STRING,
+            },
+            success: {
+              type: PropTypeEnum.BOOLEAN,
+            },
+          },
+        }),
+        requestBody: {
+          description: "CreateStaffUserRequest",
+          contentType: HttpContentTypeEnum.APPLICATION_JSON,
+          schema: new TypeDescriber<CreateStaffUserData>({
+            name: "CreateStaffUserRequest",
+            type: PropTypeEnum.OBJECT,
+            props: {
+              firstName: {
+                type: PropTypeEnum.STRING,
+                required: true,
+              },
+              lastName: {
+                type: PropTypeEnum.STRING,
+                required: true,
+              },
+              phoneNumber: {
+                type: PropTypeEnum.STRING,
+                required: true,
+              },
+              email: {
+                type: PropTypeEnum.STRING,
+                required: true,
+              },
+              jobTitle: {
+                type: PropTypeEnum.STRING,
+                required: true,
+              },
+              tenantId: {
+                type: PropTypeEnum.NUMBER,
+                required: true,
+              },
+            },
+          }),
+        },
+      },
     });
   }
 }
